# cadical

./: CMakeLists.txt
src/: file.cpp  internal.hpp  random.cpp  resources.cpp  terminal.cpp
